# websec

./: .gitignore  Containerfile  LICENSE  MANIFEST.in  docker-compose.yml  pyproject.toml  pystebin-example.toml
.github/workflows/: scan.yml
docs/: Dokumentacja.Rmd  README.md  install.md  slides.md
pystebin/: config.py  database.py  exception.py  main.py  models.py  settings.py
pystebin/models/: paste.py
pystebin/routes/: __init__.py  index.py  paste.py  user.py
pystebin/templates/: 401.html.j2  404.html.j2  base.html.j2  index.html.j2  list.html.j2  paste.html.j2  settings.html.j2
pystebin/templates/components/: nav.html.j2  submit.html.j2
terraform/: compute.tf  compute_app.tf  compute_db.tf  compute_lb.tf  data.tf  network.tf  network_internal.tf  networkd_db.tf  output.tf  var.tf  vars.tf
terraform/old/: provider.tf  var.tf
terraform/templates/: app-user-data.tpl  db-user-data.tpl  lb-user-data.tpl
