# Build

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pystebin"
dynamic = ["version"]
description = "Simple Pastebin Written in Python"
authors = []
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
    "jinja2",
    "psycopg",
    "pydantic-settings",
    "python-jose[cryptography]",
    "python-multipart",
    "uvicorn[standard]",
]
scripts.pystebin = "pystebin.main:main"

[project.optional-dependencies]
dev = ["ruff", "black"]

[tool.setuptools.packages]
find = {}


# Tools

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
enable_error_code = [
    "ignore-without-code", # tells Mypy that all ignore comments need specific error codes
]
disable_error_code = ["no-untyped-call", "no-any-return"]
show_error_codes = true # tells Mypy that all ignore comments need specific error codes
warn_unused_ignores = true # tells Mypy to log errors for unnecessary ignore comments
strict = true

[tool.ruff]
# default: E,F; isort: "I001"
extend-select = ["ANN", "C4", "RUF", "SIM", "TCH", "W"]
ignore = ["ANN201"]
show-fixes = true
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"
